# james_library

./: .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_STRATEGY.md  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  Dynamic Resonance Rooting (Friction Mechanism).md  ELENA_SOUL.md  Guarino Industries LLC.md  INSTALL_RAIN.ps1  JAMES_SOUL.md  JASMINE_SOUL.md  Justfile  LICENSE  LUCA_SOUL.md  Location is a Dynamic Variable.md  NOTICE  PRODUCT_ROADMAP.md  RAIN_LAB_MEETING_LOG.md  RAIN_Lab_Chat.cmd  RAIN_Lab_First_Run.cmd  RAIN_Lab_Health_Check.cmd  RAIN_Lab_Start.cmd  README.fr.md  README.ja.md  README.md  README.ru.md  README.vi.md  README.zh-CN.md  README_JAMES_READER.md  (+92 more)
crates/logic_prover/: Cargo.toml
crates/logic_prover/src/: lib.rs
james_library-main/: .gitignore  CODE_REVIEW.md  Cargo.toml  ELENA_SOUL.md  INSTALL_RAIN.cmd  INSTALL_RAIN.ps1  JAMES_SOUL.md  LUCA_SOUL.md  Makefile  RAIN_LAB_MEETING_LOG.md  RAIN_Lab_Chat.cmd  RAIN_Lab_First_Run.cmd  RAIN_Lab_Health_Check.cmd  RAIN_Lab_Start.cmd  RAIN_Lab_Validate.cmd  README.md  README_JAMES_READER.md  RELEASE_CHECKLIST.md  Reality Built on a Finite Set of Geometric Instructions.md  Recursive Resonance Stabilization.md  bootstrap_local.py  build.rs  chat_with_james.py  deploy.py  external_integrations.py  godot_setup.py  hello_os_executable.py  james_reader.py  library_compiler.py  meeting_workflow.py  memory.py  metrics_log.jsonl  openclaw_service.py  pyproject.toml  rain_bridge_server.py  rain_doctor.py  rain_first_run.py  rain_health_check.py  rain_lab.py  rain_lab_meeting.py  (+14 more)
james_library-main/.devin/: wiki.json
james_library-main/.github/: FUNDING.yml
james_library-main/docs/: BOUNDED_ADAPTATION_POLICY.md  FIRST_RUN_CHECKLIST.md  PRODUCTION_READINESS.md  TROUBLESHOOTING.md
james_library-main/godot_client/contracts/: NEUTRAL_EVENT_CONTRACT.md
james_library-main/hello_os/: __init__.py  core.py  symbols.py
james_library-main/meeting_archives/: launcher_events.jsonl
james_library-main/rain_lab_chat/: __init__.py  __main__.py  _sanitize.py  agents.py  citations.py  config.py  context.py  director.py  doctor.py  guardrails.py  logging_events.py  orchestrator.py  response_gen.py  summarization.py  voice.py  web_search.py
james_library-main/scripts/: quickstart_lmstudio.ps1  quickstart_lmstudio.sh
james_library-main/src/agent/: prompt.rs
james_library-main/tests/: benchmark_verify_citation.py  telegram_attachment_fallback.rs  test_bootstrap_local.py  test_context_manager.py  test_external_integrations.py  test_hello_os_executable.py  test_hello_os_import.py  test_input_sanitization.py  test_meeting_integration.py  test_openclaw_service.py  test_rain_lab_meeting_structure.py  test_resume_checkpoint.py  test_rlm_completion_parsing.py  test_rlm_local_environment.py  test_smoke.py  test_soul_files.py  test_summarization.py  test_vulnerability.py  test_web_sanitization.py  test_windows_one_click_install.py
(+1026 files in other folders)
