[package]
name = "logic_prover"
version = "0.1.0"
edition = "2021"
description = "Lightweight DPLL SAT solver exposed as a WASM plugin for ZeroClaw"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
